--- a/index.html
+++ b/index.html
@@ -1,208 +1,180 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gestiones BV</title>
-  <style>
-    /* CSS general */
-    body {
-      margin: 0;
-      font-family: 'Helvetica', sans-serif;
-      color: #333;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gestiones BV</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Helvetica', sans-serif;
+            color: #333;
+            display: flex; /* Para centrar el contenido verticalmente en pantallas grandes */
+            flex-direction: column;
+            min-height: 100vh; /* Asegura que el footer esté siempre abajo */
+        }
 
-    /* Superposición de fondo con transparencia */
-    .background-overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: url('https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/Como-crear-una-estrategia-de-marketing-en-redes-sociales-01.png') no-repeat center center fixed;
-      background-size: cover;
-      opacity: 0.3;
-      z-index: -1;
-    }
+        .background-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/Como-crear-una-estrategia-de-marketing-en-redes-sociales-01.png') no-repeat center center fixed;
+            background-size: cover;
+            opacity: 0.3;
+            z-index: -1;
+        }
 
-    /* Encabezado */
-    header {
-      background-color: #333;
-      color: #fff;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px 40px;
-      font-size: 1.5em;
-    }
+        header {
+            background-color: #333;
+            color: #fff;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 40px;
+            font-size: 1.5em;
+        }
 
-    header h1 {
-      font-size: 2em;
-      margin: 0;
-    }
+        header h1 {
+            font-size: 2em;
+            margin: 0;
+        }
 
-    nav {
-      display: flex;
-      gap: 20px;
-    }
+        nav {
+            display: flex;
+            gap: 20px;
+        }
 
-    nav a {
-      text-decoration: none;
-      color: #fff;
-      font-weight: bold;
-      font-size: 1.2em;
-    }
+        nav a {
+            text-decoration: none;
+            color: #fff;
+            font-weight: bold;
+            font-size: 1.2em;
+        }
 
-    nav a:hover {
-      text-decoration: underline;
-    }
+        nav a:hover {
+            text-decoration: underline;
+        }
 
-    /* Contenido principal */
-    .content {
-      padding: 40px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 40px;
-    }
+        .content {
+            padding: 40px;
+            flex: 1; /* Permite que el contenido principal se expanda */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 40px;
+            width: 90%; /* Ancho máximo del contenido */
+            max-width: 1200px;
+            margin: 0 auto; /* Centra el contenido horizontalmente */
+        }
 
-    .services {
-      display: flex;
-      justify-content: space-around;
-      flex-wrap: wrap;
-      gap: 40px;
-      max-width: 1200px;
-      margin: 40px auto;
-    }
+        .services {
+            display: flex;
+            justify-content: center; /* Centra los elementos horizontalmente */
+            flex-wrap: wrap;
+            gap: 40px;
+        }
 
-    .service-item {
-      background: #ffffff;
-      padding: 20px;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-      text-align: center;
-      width: 30%;
-      min-width: 300px;
-      aspect-ratio: 16 / 9; /* Imagen panorámica */
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      font-size: 1.2em;
-    }
+        .service-item {
+            background: #ffffff;
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            width: calc(33.33% - 27px); /* Ajuste para el gap */
+            box-sizing: border-box; /* Incluye el padding y el border en el ancho */
+            display: flex;
+            flex-direction: column;
+            aspect-ratio: 1 / 1;
+            overflow: hidden;
+        }
 
-    .service-item img {
-      max-width: 100%;
-      border-radius: 10px;
-      margin-bottom: 15px;
-    }
+        .service-item img {
+            width: 100%;
+            height: 60%;
+            border-radius: 10px;
+            margin-bottom: 15px;
+            object-fit: cover;
+        }
 
-    .service-item h3 {
-      color: #6a7a96;
-      font-size: 1.8em;
-      margin-bottom: 10px;
-    }
+        .service-item h3 {
+            color: #6a7a96;
+            font-size: 1.5em;
+            margin-bottom: 10px;
+        }
 
-    .service-item p {
-      color: #666;
-      font-size: 1.2em;
-      line-height: 1.8;
-      text-align: justify; /* Texto justificado */
-    }
+        .service-item p {
+            color: #666;
+            font-size: 1em;
+            line-height: 1.5;
+            text-align: justify;
+            flex-grow: 1; /* Permite que el texto ocupe el espacio disponible */
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start; /* Alinea el texto al inicio */
+        }
 
-    /* Footer */
-    footer {
-      background-color: rgba(248, 249, 250, 0.85);
-      color: #555;
-      text-align: center;
-      padding: 20px 0;
-      font-size: 1.2em;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
-    }
+        footer {
+            background-color: rgba(248, 249, 250, 0.85);
+            color: #555;
+            text-align: center;
+            padding: 20px 0;
+            font-size: 1em;
+            width: 100%;
+            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+        }
 
-    /* Diseño responsivo */
-    @media (max-width: 768px) {
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-      }
+        @media (max-width: 900px) { /* Ajuste del breakpoint */
+            .service-item {
+                width: calc(50% - 20px); /* Dos columnas en pantallas medianas */
+            }
+        }
 
-      nav {
-        flex-wrap: wrap;
-        gap: 10px;
-        justify-content: center;
-      }
-
-      .services {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .service-item {
-        width: 80%;
-        max-width: 400px;
-      }
-    }
-  </style>
+        @media (max-width: 600px) { /* Ajuste del breakpoint */
+            .service-item {
+                width: 90%; /* Una columna en pantallas pequeñas */
+            }
+            .content {
+                padding: 20px;
+            }
+        }
+    </style>
 </head>
 <body>
-  <!-- Superposición de fondo -->
-  <div class="background-overlay"></div>
-
-  <!-- Encabezado -->
-  <header>
-    <h1>Gestiones BV</h1>
-    <nav>
-      <a href="index.html">Inicio</a>
-      <a href="politica_privacidad.html">Política de Privacidad</a>
-      <a href="eliminacion_datos.html">Eliminación de Datos</a>
-      <a href="terminos_condiciones.html">Términos y Condiciones</a>
-      <a href="cultura.html">Cultura</a>
-      <a href="contacto.html">Contáctanos</a>
-    </nav>
-  </header>
-
-  <!-- Contenido principal -->
-  <div class="content">
-    <section class="services">
-      <div class="service-item">
-        <img src="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/kpi_looker.png" alt="KPI y Dashboard">
-        <h3>KPI y Dashboards</h3>
-        <p>
-          Creación de indicadores clave de rendimiento personalizados y dashboards interactivos para facilitar la toma de decisiones basadas en datos.
-        </p>
-        <p>
-          Incluye integración con herramientas como Power BI, Looker, y Tableau, adaptadas a tus necesidades empresariales.
-        </p>
-      </div>
-      <div class="service-item">
-        <img src="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/bigquery.png" alt="Servicios SQL">
-        <h3>Servicios SQL</h3>
-        <p>
-          Generación y análisis de datos en plataformas como BigQuery, integradas con sistemas como Google y Facebook.
-        </p>
-        <p>
-          Implementación de modelos de datos optimizados para análisis avanzado y reportes automatizados.
-        </p>
-      </div>
-      <div class="service-item">
-        <img src="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/automatizacion.jpeg" alt="Automatización">
-        <h3>Automatización</h3>
-        <p>
-          Automatización de reportes para optimizar procesos analíticos, reduciendo tiempo y esfuerzo operativo.
-        </p>
-        <p>
-          Incluye alertas personalizadas y flujos de trabajo automáticos para agilizar la toma de decisiones.
-        </p>
-      </div>
-    </section>
-  </div>
-
-  <!-- Footer -->
-  <footer>
-    © 2024 Gestiones BV | Transformación Digital y Marketing de Datos
-  </footer>
+    <div class="background-overlay"></div>
+    <header>
+        <h1>Gestiones BV</h1>
+        <nav>
+            <a href="index.html">Inicio</a>
+            <a href="politica_privacidad.html">Política de Privacidad</a>
+            <a href="eliminacion_datos.html">Eliminación de Datos</a>
+            <a href="terminos_condiciones.html">Términos y Condiciones</a>
+            <a href="cultura.html">Cultura</a>
+            <a href="contacto.html">Contáctanos</a>
+        </nav>
+    </header>
+    <div class="content">
+        <section class="services">
+            <div class="service-item">
+                <img src="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/kpi_looker.png" alt="KPI y Dashboard">
+                <h3>KPI y Dashboards</h3>
+                <p>Creación de indicadores clave de rendimiento personalizados y dashboards interactivos para facilitar la toma de decisiones basadas en datos. Incluye integración con herramientas como Power BI, Looker, y Tableau, adaptadas a tus necesidades empresariales.</p>
+            </div>
+            <div class="service-item">
+                <img src="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/bigquery.png" alt="Servicios SQL">
+                <h3>Servicios SQL</h3>
+                <p>Generación y análisis de datos en plataformas como BigQuery, integradas con sistemas como Google y Facebook. Implementación de modelos de datos optimizados para análisis avanzado y reportes automatizados.</p>
+            </div>
+            <div class="service-item">
+                <img src="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/automatizacion.jpeg" alt="Automatización">
+                <h3>Automatización</h3>
+                <p>Automatización de reportes para optimizar procesos analíticos, reduciendo tiempo y esfuerzo operativo. Incluye alertas personalizadas y flujos de trabajo automáticos para agilizar la toma de decisiones.</p>
+            </div>
+        </section>
+    </div>
+    <footer>
+        © 2024 Gestiones BV | Transformación Digital y Marketing de Datos
+    </footer>
 </body>
 </html>
