--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
             align-items: center;
             padding: 20px 40px;
             font-size: 1.5em;
-            flex-wrap: wrap; /* Permite el ajuste en pantallas pequeñas */
+            flex-wrap: wrap;
         }
 
         header h1 {
             font-size: 2em;
             margin: 0;
-            width: auto; /* Evita que el título ocupe todo el ancho */
+            width: auto;
         }
 
         nav {
             display: flex;
             gap: 20px;
-            flex-wrap: wrap; /* Permite que los links se envuelvan */
-            justify-content: center; /* Centra los links en pantallas pequeñas */
+            flex-wrap: wrap;
+            justify-content: center;
         }
 
         nav a {
@@ -55,8 +55,8 @@
             color: #fff;
             font-weight: bold;
             font-size: 0.9em;
-            padding: 5px 10px; /* Espacio alrededor de los links */
-            white-space: nowrap; /* Evita que los links se corten */
+            padding: 5px 10px;
+            white-space: nowrap;
         }
 
         nav a:hover {
@@ -64,31 +64,22 @@
         }
 
         .content {
-            padding: 40px;
+            padding: 20px;
             flex: 1;
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 40px;
+            gap: 20px;
             width: 90%;
             max-width: 1200px;
             margin: 0 auto;
         }
 
         .services {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 40px;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 20px;
             width: 100%;
-        }
-
-        .services-top {
-            display: flex;
-            justify-content: center;
-            gap: 40px;
-            width: 100%;
-            max-width: 1200px;
         }
 
         .service-item {
@@ -97,17 +88,15 @@
             border-radius: 15px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
             text-align: center;
-            box-sizing: border-box;
             display: flex;
             flex-direction: column;
             aspect-ratio: 1 / 1;
             overflow: hidden;
-            width: calc(50% - 20px);
         }
 
         .service-item img {
             width: 100%;
-            height: 50%;
+            height: auto;
             border-radius: 10px;
             margin-bottom: 15px;
             object-fit: cover;
@@ -121,15 +110,16 @@
 
         .service-item p {
             color: #666;
-            font-size: 1.2em;
-            line-height: 1.3;
+            font-size: 1em;
+            line-height: 1.5;
             text-align: justify;
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            padding: 0 10px;
-            overflow: hidden;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
         }
 
         @media (max-width: 768px) {
@@ -138,8 +128,23 @@
                 text-align: center;
                 padding: 20px;
             }
+
             nav {
                 flex-direction: column;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .service-item {
+                padding: 10px;
+            }
+
+            .service-item h3 {
+                font-size: 1.2em;
+            }
+
+            .service-item p {
+                font-size: 0.9em;
             }
         }
     </style>
@@ -159,17 +164,15 @@
     </header>
     <div class="content">
         <section class="services">
-            <div class="services-top">
-                <div class="service-item">
-                    <img src="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/kpi_looker.png" alt="KPI y Dashboard">
-                    <h3>KPI y Dashboards</h3>
-                    <p>Creación de indicadores clave de rendimiento personalizados y dashboards interactivos para facilitar la toma de decisiones basadas en datos. Incluye integración con herramientas como Power BI, Looker, y Tableau, adaptadas a tus necesidades empresariales.</p>
-                </div>
-                <div class="service-item">
-                    <img src="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/bigquery.png" alt="Servicios SQL">
-                    <h3>Servicios SQL</h3>
-                    <p>Generación y análisis de datos en plataformas como BigQuery, integradas con sistemas como Google y Facebook. Implementación de modelos de datos optimizados para análisis avanzado y reportes automatizados.</p>
-                </div>
+            <div class="service-item">
+                <img src="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/kpi_looker.png" alt="KPI y Dashboard">
+                <h3>KPI y Dashboards</h3>
+                <p>Creación de indicadores clave de rendimiento personalizados y dashboards interactivos para facilitar la toma de decisiones basadas en datos. Incluye integración con herramientas como Power BI, Looker, y Tableau, adaptadas a tus necesidades empresariales.</p>
+            </div>
+            <div class="service-item">
+                <img src="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/bigquery.png" alt="Servicios SQL">
+                <h3>Servicios SQL</h3>
+                <p>Generación y análisis de datos en plataformas como BigQuery, integradas con sistemas como Google y Facebook. Implementación de modelos de datos optimizados para análisis avanzado y reportes automatizados.</p>
             </div>
             <div class="service-item">
                 <img src="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/automatizacion.jpeg" alt="Automatización">
