--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 20px 40px;
-            font-size: 1.3em;
+            padding: 20px;
+            font-size: 1.4em;
             flex-wrap: wrap;
             width: 100%;
             box-sizing: border-box;
+            margin: 0;
         }
 
         header h1 {
@@ -52,6 +53,7 @@
             justify-content: center;
             width: 100%;
             box-sizing: border-box;
+            margin: 0;
         }
 
         nav a {
@@ -140,7 +142,7 @@
             header {
                 flex-direction: column;
                 align-items: center;
-                padding: 10px 20px;
+                padding: 10px;
                 width: 100%;
                 box-sizing: border-box;
             }
@@ -151,6 +153,7 @@
                 gap: 5px;
                 width: 100%;
                 box-sizing: border-box;
+                margin: 0;
             }
 
             nav a {
