--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             min-height: 100vh;
             font-family: 'Helvetica', sans-serif;
             color: #333;
+            background-color: #fff;
         }
 
         .background-overlay {
@@ -78,27 +79,53 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 40px;
+            gap: 60px;
             width: 90%;
             max-width: 1200px;
             margin: 0 auto;
             box-sizing: border-box;
         }
 
+        /* Sección Quiénes Somos */
+        .about-us {
+            background: #ffffff;
+            padding: 30px 40px;
+            border-radius: 15px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            max-width: 800px;
+        }
+
+        .about-us h2 {
+            color: #6a7a96;
+            font-size: 2em;
+            margin-bottom: 20px;
+        }
+
+        .about-us p {
+            color: #666;
+            font-size: 1.1em;
+            line-height: 1.6;
+            text-align: justify;
+        }
+
+        /* Sección Servicios */
         .services {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 40px;
             width: 100%;
         }
 
-        .services-top {
+        .services h2 {
+            color: #6a7a96;
+            font-size: 2em;
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        .services-wrapper {
             display: flex;
-            justify-content: center;
+            overflow-x: auto;
             gap: 20px;
-            width: 100%;
-            max-width: 1200px;
+            padding-bottom: 10px;
         }
 
         .service-item {
@@ -108,15 +135,20 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
             text-align: left;
             box-sizing: border-box;
+            flex: 0 0 300px;
             display: flex;
             flex-direction: column;
-            width: calc(50% - 10px);
-            min-height: 300px;
+            min-height: 350px;
+            transition: transform 0.3s ease;
+        }
+
+        .service-item:hover {
+            transform: translateY(-10px);
         }
 
         .service-item img {
             width: 100%;
-            max-height: 150px;
+            max-height: 180px;
             border-radius: 10px;
             margin-bottom: 15px;
             object-fit: cover;
@@ -143,8 +175,31 @@
 
         footer {
             text-align: center;
-            padding: 10px;
+            padding: 20px;
             background-color: #f0f0f0;
+            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Scrollbar personalizado para servicios */
+        .services-wrapper::-webkit-scrollbar {
+            height: 8px;
+        }
+
+        .services-wrapper::-webkit-scrollbar-track {
+            background: #f1f1f1;
+            border-radius: 10px;
+        }
+
+        .services-wrapper::-webkit-scrollbar-thumb {
+            background: #6a7a96;
+            border-radius: 10px;
+        }
+
+        /* Responsividad */
+        @media (max-width: 1024px) {
+            .service-item {
+                flex: 0 0 250px;
+            }
         }
 
         @media (max-width: 768px) {
@@ -172,19 +227,22 @@
                 display: block;
             }
 
-            .services-top {
+            .about-us {
+                padding: 20px;
+            }
+
+            .services-wrapper {
                 flex-direction: column;
-                gap: 20px;
+                overflow-x: visible;
             }
 
             .service-item {
-                width: 100%;
-                margin-bottom: 20px;
-                min-height: 250px;
+                flex: 0 0 100%;
+                min-height: 300px;
             }
 
-            .service-item p {
-                font-size: 1.1em;
+            .services h2 {
+                font-size: 1.8em;
             }
         }
     </style>
@@ -198,32 +256,37 @@
             <a href="politica_privacidad.html">Política de Privacidad</a>
             <a href="eliminacion_datos.html">Eliminación de Datos</a>
             <a href="terminos_condiciones.html">Términos y Condiciones</a>
-            <a href="cultura.html">Cultura</a>
             <a href="contacto.html">Contáctanos</a>
         </nav>
     </header>
     <div class="content">
+        <!-- Sección Quiénes Somos -->
+        <section class="about-us">
+            <h2>Quiénes Somos</h2>
+            <p>
+                En Gestiones BV, nuestra cultura se fundamenta en la innovación, excelencia y confianza. Nuestra misión es potenciar el crecimiento de nuestros clientes a través del marketing innovador y análisis avanzado de datos, transformando datos complejos en estrategias claras y efectivas que ayudan a las empresas a posicionarse y alcanzar sus metas. Aspiramos a ser líderes en transformación digital para negocios en crecimiento, redefiniendo cómo las empresas utilizan el análisis de datos y las estrategias de marketing para crear valor sostenible en un mundo en constante cambio.
+            </p>
+        </section>
+        <!-- Sección Nuestros Servicios -->
         <section class="services">
-            <div class="services-top">
+            <h2>Nuestros Servicios</h2>
+            <div class="services-wrapper">
                 <div class="service-item">
                     <img src="https://gestionesbv.github.io/gestiones_bv/kpi_looker.png" alt="KPI y Dashboard">
                     <h3>KPI y Dashboards</h3>
-                    <p>Creación de indicadores clave de rendimiento personalizados y dashboards interactivos para facilitar la toma de decisiones basadas en datos. Incluye integración con herramientas como Power BI, Looker, y Tableau, adaptadas a tus necesidades empresariales.</p>
+                    <p>Creación de indicadores clave de rendimiento personalizados y dashboards interactivos para facilitar la toma de decisiones basadas en datos. Incluye integración con herramientas como BigQuery, Sharepoint, y Looker, adaptadas a tus necesidades empresariales.</p>
                 </div>
                 <div class="service-item">
                     <img src="https://gestionesbv.github.io/gestiones_bv/bigquery.png" alt="Servicios SQL">
                     <h3>Servicios SQL</h3>
                     <p>Generación y análisis de datos en plataformas como BigQuery, integradas con sistemas como Google y Facebook. Implementación de modelos de datos optimizados para análisis avanzado y reportes automatizados.</p>
                 </div>
-            </div>
-            <div class="service-item">
-                <img src="https://gestionesbv.github.io/gestiones_bv/automatizacion.jpeg" alt="Automatización">
-                <h3>Automatización</h3>
-                <p>
-                    Automatización de procesos repetitivos y envío de reportes programados 
-                    para maximizar la eficiencia de los equipos y reducir costos. 
-                    Configuración de triggers, integraciones y scripts a medida.
-                </p>
+                <div class="service-item">
+                    <img src="https://gestionesbv.github.io/gestiones_bv/automatizacion.jpeg" alt="Automatización">
+                    <h3>Automatización</h3>
+                    <p>Automatización de procesos repetitivos y envío de reportes programados para maximizar la eficiencia de los equipos y reducir costos. Configuración de triggers, integraciones y scripts a medida.</p>
+                </div>
+                <!-- Puedes agregar más servicios aquí -->
             </div>
         </section>
     </div>
